[package]
name = "cog"
version = "0.1.0"
authors = ["Leynos <leynos@troubledskies.net>"]
build = "build.rs"

[build-dependencies]
syntex = { version = "0.44.0", optional = true }
diesel_codegen_syntex = { version = "0.8.0", features = ["postgres"], optional = true }

[dependencies]
rustc-serialize = "^0.3"
diesel = { version = "0.11.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
iron = { version = "*" }
router = { version = "*" }
